[project]
name = "signal-hierarchy-extractor"
version = "0.1.0"
description = "Extract dot-separated RTL signal hierarchy paths with Python and Yosys."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "AilgeAssert" }
]
keywords = ["eda", "rtl", "verilog", "systemverilog", "yosys", "formal-verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]
dependencies = []

[project.scripts]
signal-hierarchy-extractor = "signal_hierarchy_extractor:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["signal_hierarchy_extractor"]

[tool.setuptools.package-dir]
"" = "src"
